# pdb-mldata

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: storage_schemas.md
pdb_mldata/: __init__.py  curation.py  filtering_rules.py  lmdb_utils.py  structure_encoding.py  viewer_rcsb.py
scripts/: audit_build_rejections.py  build_lmdb.py  check_lmdb_sanity.py  download_assemblies.py  dump_sqlite_sql.py  export_lmdb_sqlite.py  fetch_metadata.py  fetch_sqlite_metadata.py  lmdb_utils.py  report_lmdb.py  verify_lmdb.py
scripts/curation/: filter_binding_pairs.py  select_best_pairs.py
scripts/viewer/: README.md  build_search_terms.py  dump_postgres_sql.py  export_sqlite.py  fetch_rcsb_entities_metadata.py  fetch_rcsb_entries_metadata.py  fetch_uniprot_metadata.py
tests/: test_structure_encoding.py
