[project]
name = "pdb-mldata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.87",
    "gemmi>=0.7.5",
    "lmdb>=2.2.0",
    "msgpack>=1.1.2",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.10",
]
